continuing the carousel exploration, now the pages are fix sized but there is still an annoying vertical scrollbar, even tho they should be 100% of the height

--- a/style.css
+++ b/style.css
@@ -1,79 +1,115 @@
+/* html {
+  height: 100%;
+  margin: 0;
+} */
 
 body {
-    font-family: sans-serif;
-    /* animated shifting background with color gradient */
-    background: linear-gradient(-30deg, rgb(210 210 246), rgb(133, 133, 221));
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-    height: 125hv;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    margin-top: 60px; /* same as the navigation bar height */
-    padding: 30px;
+  font-family: sans-serif;
+  /* animated shifting background with color gradient */
+  background: linear-gradient(-30deg, rgb(210 210 246), rgb(71, 71, 136));
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 125hv;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 0; /* the body did not have margin zero by default*/
+  margin-top: 80px; /* a bit more than the navigation bar height */
+  margin-bottom: 80px;
+  padding: 0px;
 }
 
-header { 
-    background-color: rgba(255, 255, 255, .5);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 0 20px 0 black;
-    
+header {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  margin: 0;
+  display: inline-flex;
+  justify-content: space-between;
+  box-shadow: 0 0 20px 0 black;
 }
 
 /* the asterisk '*' means all elemenents inside header */
 header * {
-    display: inline;
+  color: white;
+
+  display: inline-flex;
+  padding: 0px;
+  align-items: center;
 }
 
 header li {
-    margin: 20px
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 header li a {
-    color: black;
-    text-decoration: none;
+  text-decoration: none;
 }
 
-.title {
-    text-align: center;
-    margin-top: 60px;
+nav {
+  float: right;
+  height: 60px;
+}
+
+.name_in_nav {
+  margin-left: 20px;
 }
 
 main {
-    color: white;
+  color: white;
+}
+
+/* carousel box */
+.carousel_container {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 110vh;
 }
 
 ul.carousel {
-    width: 90vw;
-    height: 300px;
-    padding: 0px;
-    display: flex;
-    gap: 4vw;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
+  width: 100%;
+  height: 50%;
+  padding: 0;
+  display: flex;
+  gap: 20px;
+  overflow-x: scroll;
+  /* overflow-y: hidden; */
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
 }
 
 ul.carousel li {
-    list-style-type: none;
-    background-color: #eeeeee;
-    border: 1px solid #dddddd;
-    padding: 20px;
-    flex: 0 0 100%;
+  list-style-type: none;
+}
+
+.carousel_page {
+  width: 400px;
+  height: 100%;
+  list-style-type: none;
+  background-color: #eeeeee;
+  /* border: 0px solid #000000; */
+  /* padding: 20px; */
+  flex: 0 0 auto;
+}
+
+ul.carousel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
